--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,13 @@
 # Site navigation links
 
+- title: Home
+  url: /
+
+- title: About
+  url: /yoonseo/
+
+- title: Publications
+  url: /pubs/
+
 - title: Projects
-  url: /projects/
+  url: /inprogress/
